# namegen

./: LICENSE  README.md  TODO.md  main.py  namegen.py  pyproject.toml
grammars/: klingon-grammar.json  kobol-grammar.json  sarn-grammar.json  zeta-grammar.json
namegen/: __init__.py
src/namegen/: __init__.py
tests/: test_bounded.py
