[project]
name = "namegen"
version = "0.1.0"
description = "Module to generate names based on a grammar file"
readme = "README.md"
authors = [
    { name = "Frank Mitchell", email = "me@frank-mitchell.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
